# 17B

include/13b/: IMemoryManager.hpp  IPhysicsBody.hpp  IPhysicsWorld.hpp  IRootEnv.hpp  ISound.hpp
include/17b/ecs/: IEntity.hpp  IEntityComponent.hpp  IPhysicsComponent.hpp  ISoundComponent.hpp
include/17b/sound/: ISound.hpp  ISoundEmitter.hpp  ISoundWorld.hpp
include/17b/system/: IRoot.hpp  IRotor.hpp
src/: 17B.sln
src/17b/ecs/: CMakeLists.txt  Entity.cpp  Entity.hpp  EntityComponent.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  SoundComponent.cpp  SoundComponent.hpp
src/17b/gamewrapper/: CMakeLists.txt  GameWrapper.cpp  README.md
src/17b/physics/: CMakeLists.txt  PhysicsBody.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp
src/17b/sound/: ISoundImpl.hpp  Sound.cpp  Sound.hpp  SoundEmitter.cpp  SoundEmitter.hpp  SoundWorld.cpp  SoundWorld.hpp
src/game/: Game.cs  Game.csproj  IGame.cs
tests/: CMakeLists.txt
tests/enginetest/: CMakeLists.txt  main.cpp
